compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/redundantExplicitBackingField.kt
// RUN_PIPELINE_TILL: BACKEND
val it: Int
    <!REDUNDANT_EXPLICIT_BACKING_FIELD!>field<!> = 42
